--- a/ultrasonic_HC_SR04_1.ipynb
+++ b/ultrasonic_HC_SR04_1.ipynb
@@ -6,7 +6,7 @@
       "name": "ultrasonic_HC-SR04_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN/XjSdusvyKXbrqjvsjE74",
+      "authorship_tag": "ABX9TyP1TFyhY8+ogRfhpzKHNktW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -341,6 +341,21 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_mQBAryoLUYJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Download .py\n",
+        "\n",
+        "ultrasonic_1.py\n",
+        "ultrasonic_2.py\n",
+        "\n",
+        "[from Github]  (https://github.com/rtlab1417/my-raspberry)"
+      ]
     }
   ]
 }
